--- a/notes-app-frontend/src/addeditnotes/AddEditNotes.css
+++ b/notes-app-frontend/src/addeditnotes/AddEditNotes.css
@@ -1,114 +1,124 @@
 body {
-    margin: 20px;
-    background-color: lightgray;
-  }
-  
-  .app-container{  
-     grid-template-columns: 1fr; 
-  }
-  
-  @media (min-width: 600px) {
-    .app-container{
-      display: grid;
-      grid-template-columns: 200px 1fr;
-      gap: 20px
-    }
-  }
-  
-  .notes-grid{
+  margin: 20px;
+  background-color: lightgray;
+}
+
+.app-container {
+  grid-template-columns: 1fr;
+}
+
+@media (min-width: 600px) {
+  .app-container {
     display: grid;
-    grid-template-columns: repeat(
-      auto-fill,
-      minmax(250px, 1fr)
-    );
-    grid-auto-rows: minmax(250px, auto);
+    grid-template-columns: 200px 1fr;
     gap: 20px;
   }
-  
-  .note-item{
-    display: flex;
-    flex-direction: column;
-    border: 1px solid rgb(189, 189, 202);
-    padding: 10px;
-    border-radius: 10px;
-    background-color: rgb(63, 207, 207);
-    box-shadow: 0px 0px 10px rgb(158, 160, 192);
-    cursor: pointer;
-  }
-  
-  .notes-header{
-    display: flex;
-    justify-content: flex-end;
-  }
-  
-  .notes-header button{
-    font-size: 20px;
-    font-weight: bolder;
-    background-color: transparent;
-    border-radius: 5px;
-    border: none;
-    cursor: pointer;
-    max-width: fit-content;
-    max-height: fit-content;
-    box-shadow: 0px 0px 10px rgb(158, 160, 192);
-  }
-  
-  .notes-header button:hover{  
-    background-color: red; 
-    box-shadow: 0px 0px 10px rgb(158, 160, 192);
-  }
-  
-  h2{
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
-  }
-  
-  .note-form{
-    display: flex;
-    flex-direction: column;
-    gap:20px
-  }
-  
-  textarea, input{
-    border-radius: 5px;
-    border: 1px solid black;
-    padding: 10px;
-    font-size: 16px;
-  }
-  
-  .note-form button{
-    border-radius: 5px;
-    background-color: blue;
-    color: white;
-    border: none;
-    padding: 10px;
-    font-size: 16px;
-  }
-  
-  .note-form button:hover{
-    opacity: 0.8;
-    cursor: pointer;
-  }
-
-.edit-buttons{
-    display: flex;
-    justify-content: space-evenly;
-    gap: 5px;
-
 }
 
-.edit-buttons button{
-    flex: 1;
-    font-weight: bolder;
+.notes-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-auto-rows: minmax(250px, auto);
+  gap: 20px;
 }
 
-.edit-buttons button:last-of-type{
-    background-color: red;
+.note-item {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid rgb(189, 189, 202);
+  padding: 10px;
+  border-radius: 10px;
+  background-color: rgb(63, 207, 207);
+  box-shadow: 0px 0px 10px rgb(158, 160, 192);
+  cursor: pointer;
 }
 
-.error-cls{
+.notes-header {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.notes-header button {
+  font-size: 20px;
+  font-weight: bolder;
+  background-color: transparent;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  max-width: fit-content;
+  max-height: fit-content;
+  box-shadow: 0px 0px 10px rgb(158, 160, 192);
+}
+
+.notes-header button:hover {
+  background-color: red;
+  box-shadow: 0px 0px 10px rgb(158, 160, 192);
+}
+
+h2 {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.note-form {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  height: 300px;
+}
+
+textarea,
+input {
+  border-radius: 5px;
+  border: 1px solid black;
+  padding: 10px;
+  font-size: 16px;
+}
+
+.note-form button {
+  border-radius: 5px;
+  background-color: blue;
+  color: white;
+  border: none;
+  padding: 10px;
+  font-size: 16px;
+  /* width: 200px; */
+}
+
+.note-form button:hover {
+  opacity: 0.8;
+  cursor: pointer;
+}
+
+.note-form button:disabled {
+  cursor: auto;
+  opacity: 0.5;
+}
+
+.edit-buttons {
+  display: flex;
+  justify-content: space-evenly;
+  gap: 5px;
+}
+
+.edit-buttons button {
+  flex: 1;
+  font-weight: bolder;
+}
+
+.edit-buttons button:last-of-type {
+  background-color: red;
+}
+
+.error-cls {
   color: red;
   font-size: 12px;
+  margin-top: 3px;
+  /* height: 100px; */
+}
+
+.btn-container {
+  height: 100px;
 }
